--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,10 +6,47 @@
 }
 .container-footer {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+  @media screen and (min-width: $tablet) {
+    align-items: baseline;
+    justify-content: center;
+  }
+  @media screen and (min-width: $desktop) {
+    flex-direction: row;
+    justify-content: unset;
+  }
+}
+.footer-join {
+  display: flex;
+  flex-direction: column;
+  @media screen and (min-width: $tablet) {
+    flex-direction: row;
+  }
+  @media screen and (min-width: $tablet) and (max-width: $desktop) {
+    margin-bottom: 60px;
+  }
+  @media screen and (min-width: $desktop) {
+    align-items: baseline;
+  }
 }
 .footer-card-left {
-  min-width: 231px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 231px;
+  margin-bottom: 60px;
+  @media screen and (min-width: $tablet) {
+    margin-left: 61px;
+    margin-right: 165px;
+    margin-bottom: unset;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-left: unset;
+    margin-right: unset;
+    align-items: unset;
+  }
 }
 .logo-footer {
   display: block;
@@ -22,9 +59,27 @@
 }
 
 .footer-card-center {
-  margin-left: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+  @media screen and (min-width: $tablet) {
+    margin-bottom: unset;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-left: 70px;
+    align-items: unset;
+  }
 }
-
+.footer-raws {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  @media screen and (min-width: $desktop) {
+    display: block;
+  }
+}
 .footer-list {
   display: block;
   color: $white-color;
@@ -34,6 +89,10 @@
   line-height: 1.72;
   letter-spacing: 0.03em;
   &__address {
+    text-align: center;
+    @media screen and (min-width: $desktop) {
+      text-align: unset;
+    }
     font-style: inherit;
     color: $white-color;
   }
@@ -71,12 +130,25 @@
 
 .footer-card-right {
   display: flex;
+  align-items: center;
   flex-direction: column;
-  margin-left: 93px;
+  max-width: 450px;
+  @media screen and (min-width: $tablet) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-left: 93px;
+    align-items: unset;
+    max-width: unset;
+  }
   &__cont {
     display: flex;
+    flex-direction: column;
+    @media screen and (min-width: $desktop) {
+      flex-direction: row;
+    }
     align-items: center;
-    min-width: 358px;
   }
   &__title {
     margin-bottom: 20px;
@@ -85,7 +157,6 @@
 .submit-input {
   display: flex;
   align-items: center;
-  width: 358px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   padding: 15px 16px;
@@ -93,6 +164,13 @@
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
+  margin-bottom: 20px;
+  width: 450px;
+  resize: none;
+  @media screen and (min-width: $desktop) {
+    margin-bottom: unset;
+    width: 358px;
+  }
   color: $primary-text-color;
   border-color: $white-color;
   &:focus,
@@ -107,10 +185,14 @@
   }
 }
 .btn-submit {
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-left: 12px;
+  @media screen and (min-width: $desktop) {
+    margin-left: 12px;
+  }
   min-width: 200px;
   min-height: 50px;
   background-color: $accent-color;
