--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -113,11 +113,18 @@ ul {
 .section__title {
   color: #212121;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
 }
 
 .section {
@@ -127,6 +134,12 @@ ul {
 @media screen and (min-width: 1200px) {
   .section {
     padding: 95px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .feature {
+    padding-bottom: 0px;
   }
 }
 
@@ -443,11 +456,70 @@ ul {
 
 .container-footer {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .container-footer {
+    align-items: baseline;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-footer {
+    flex-direction: row;
+    justify-content: unset;
+  }
+}
+
+.footer-join {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-join {
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .footer-join {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-join {
+    align-items: baseline;
+  }
 }
 
 .footer-card-left {
-  min-width: 231px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 231px;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-card-left {
+    margin-left: 61px;
+    margin-right: 165px;
+    margin-bottom: unset;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-card-left {
+    margin-left: unset;
+    margin-right: unset;
+    align-items: unset;
+  }
 }
 
 .logo-footer {
@@ -462,7 +534,36 @@ ul {
 }
 
 .footer-card-center {
-  margin-left: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-card-center {
+    margin-bottom: unset;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-card-center {
+    margin-left: 70px;
+    align-items: unset;
+  }
+}
+
+.footer-raws {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-raws {
+    display: block;
+  }
 }
 
 .footer-list {
@@ -476,8 +577,15 @@ ul {
 }
 
 .footer-list__address {
+  text-align: center;
   font-style: inherit;
   color: #fff;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-list__address {
+    text-align: unset;
+  }
 }
 
 .footer-list:not(:last-child) {
@@ -517,14 +625,36 @@ ul {
 
 .footer-card-right {
   display: flex;
+  align-items: center;
   flex-direction: column;
-  margin-left: 93px;
+  max-width: 450px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-card-right {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-card-right {
+    margin-left: 93px;
+    align-items: unset;
+    max-width: unset;
+  }
 }
 
 .footer-card-right__cont {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  min-width: 358px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-card-right__cont {
+    flex-direction: row;
+  }
 }
 
 .footer-card-right__title {
@@ -534,7 +664,6 @@ ul {
 .submit-input {
   display: flex;
   align-items: center;
-  width: 358px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   padding: 15px 16px;
@@ -542,8 +671,18 @@ ul {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
+  margin-bottom: 20px;
+  width: 450px;
+  resize: none;
   color: #757575;
   border-color: #fff;
+}
+
+@media screen and (min-width: 1200px) {
+  .submit-input {
+    margin-bottom: unset;
+    width: 358px;
+  }
 }
 
 .submit-input:focus, .submit-input:hover {
@@ -558,10 +697,11 @@ ul {
 }
 
 .btn-submit {
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-left: 12px;
   min-width: 200px;
   min-height: 50px;
   background-color: #2196f3;
@@ -570,6 +710,12 @@ ul {
   border-radius: 4px;
   padding: 10px 28px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .btn-submit {
+    margin-left: 12px;
+  }
 }
 
 .btn-submit:hover, .btn-submit:focus {
