--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,19 +1,42 @@
 /* Our team */
-.best {
+.section-team {
   background: rgba(245, 244, 250, 1);
 }
 .team {
-  display: flex;
-  padding-left: 0px;
-  justify-content: space-between;
+  display: block;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: baseline;
+    margin: -15px;
+  }
+  @media screen and (min-width: $desktop) {
+    flex-wrap: unset;
+  }
   &__item {
     background: $white-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    margin: 0 15px 30px 15px;
+    @media screen and (min-width: $tablet) {
+      width: calc((100% - 15px * 4) / 2);
+      margin: 15px;
+    }
+    @media screen and (min-width: $desktop) {
+      width: calc((100% - 15px * 8) / 4);
+      margin: 15px;
+    }
+  }
+  // закоментить потом
+  &__img {
+    width: 100%;
+    height: 100%;
   }
   &__member {
     display: block;
+    width: 100%;
     padding-top: 30px;
     padding-bottom: 30px;
   }
