--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "./base/container";
 
 @import "./layout/header";
+@import "./layout/menu-container";
 @import "./layout/hero";
 @import "./layout/modal_in";
 @import "./layout/features";
