--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,9 @@ ul {
 }
 
 .backdrop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
@@ -233,33 +236,97 @@ body {
 .header__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.menu-toggle.js-open-menu {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-toggle.js-open-menu {
+    display: none;
+  }
+}
+
+.menu-toggle.js-open-menu > .menu-btn__icon-m {
+  display: block;
+  fill: #212121;
+}
+
+.menu-toggle.js-open-menu > .menu-btn__icon-m:hover {
+  fill: #2196f3;
 }
 
 .nav {
+  width: 100%;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    width: unset;
+  }
 }
 
 .nav__site {
-  display: flex;
-  align-items: center;
-  margin-left: 93px;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__site {
+    display: flex;
+    align-items: center;
+    margin-left: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav__site {
+    margin-left: 93px;
+  }
 }
 
 .nav__auth {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  margin-left: auto;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__auth {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav__auth {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: auto;
+  }
 }
 
 .logo-header {
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .logo-header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .logo-header .nav_color_dark {
-  color: #000 !important;
+  color: #000;
 }
 
 .active {
@@ -306,13 +373,14 @@ body {
   color: #2196f3;
 }
 
-.auth-list {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.auth-list:not(:first-child) {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .auth-list {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .auth-list:not(:first-child) {
+    margin-left: 50px;
+  }
 }
 
 .auth-list__link {
@@ -330,6 +398,12 @@ body {
 .auth-list__link:hover .btn-phone,
 .auth-list__link:focus .btn-phone {
   fill: #2196f3;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .auth-list:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .btn-mail {
@@ -357,6 +431,128 @@ body {
 .btn-phone .btn-phone:hover,
 .btn-phone .btn-phone:focus {
   fill: #2196f3;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  padding: 48px 40px;
+  background-color: #fff;
+  z-index: 4;
+  transform: translateX(100%);
+}
+
+.menu-container .menu-toggle {
+  background-color: transparent;
+}
+
+.menu-container__box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu-container.is-open {
+  transform: translateX(0%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) linear;
+}
+
+.menu-btn__icon-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  fill: #212121;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) linear;
+}
+
+.menu-btn__icon-close:hover {
+  fill: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) linear;
+}
+
+.menu-list {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.menu-list:not(:last-child) {
+  margin-bottom: 37px;
+}
+
+.menu-list__link {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
+
+.menu-list:hover,
+.menu-list:focus {
+  color: #2196f3;
+}
+
+.menu-list__link.active {
+  color: #2196f3;
+}
+
+.link_m-tel {
+  display: block;
+  margin-bottom: 37px;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.link_m-mail {
+  display: block;
+  margin-bottom: 64px;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #757575;
+}
+
+.m-social {
+  display: flex;
+  flex-direction: row;
+}
+
+.m-social__item {
+  position: relative;
+}
+
+.m-social__item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.m-social__link {
+  display: block;
+  text-decoration: none;
+  color: #2196f3;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+}
+
+.m-social__link::after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: -10px;
+  top: 0px;
+  width: 1px;
+  height: 22px;
+  background-color: rgba(33, 33, 33, 0.2);
 }
 
 /* Hero */
@@ -416,6 +612,23 @@ body {
 }
 
 /* Modal */
+.modal {
+  width: calc(100vw - 30px);
+  height: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+  }
+}
+
 .person__form,
 .phone__form,
 .mail__form {
@@ -600,7 +813,11 @@ body {
 }
 
 .feature__item {
-  margin: 0 15px 30px 15px;
+  margin-bottom: 30px;
+}
+
+.feature__item:last-child {
+  margin-bottom: 0;
 }
 
 @media screen and (min-width: 768px) {
