--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -180,33 +180,97 @@ ul {
 .header__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.menu-toggle.js-open-menu {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-toggle.js-open-menu {
+    display: none;
+  }
+}
+
+.menu-toggle.js-open-menu > .menu-btn__icon-m {
+  display: block;
+  fill: #212121;
+}
+
+.menu-toggle.js-open-menu > .menu-btn__icon-m:hover {
+  fill: #2196f3;
 }
 
 .nav {
+  width: 100%;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    width: unset;
+  }
 }
 
 .nav__site {
-  display: flex;
-  align-items: center;
-  margin-left: 93px;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__site {
+    display: flex;
+    align-items: center;
+    margin-left: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav__site {
+    margin-left: 93px;
+  }
 }
 
 .nav__auth {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  margin-left: auto;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__auth {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav__auth {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: auto;
+  }
 }
 
 .logo-header {
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .logo-header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .logo-header .nav_color_dark {
-  color: #000 !important;
+  color: #000;
 }
 
 .active {
@@ -253,13 +317,14 @@ ul {
   color: #2196f3;
 }
 
-.auth-list {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.auth-list:not(:first-child) {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .auth-list {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .auth-list:not(:first-child) {
+    margin-left: 50px;
+  }
 }
 
 .auth-list__link {
@@ -277,6 +342,12 @@ ul {
 .auth-list__link:hover .btn-phone,
 .auth-list__link:focus .btn-phone {
   fill: #2196f3;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .auth-list:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .btn-mail {
@@ -308,14 +379,21 @@ ul {
 
 /* Work-cards */
 .work-card {
-  display: flex;
-  flex-wrap: wrap;
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .work-card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: baseline;
+    margin: -15px;
+  }
 }
 
 .work-card-item {
   display: block;
-  width: 370px;
-  margin-right: 30px;
   margin-bottom: 30px;
   background: #fff;
   border-bottom: 1px solid #eeeeee;
@@ -328,16 +406,21 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 768px) {
+  .work-card-item {
+    margin: 15px;
+    width: calc((100% - 15px * 4) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .work-card-item {
+    width: calc((100% - 15px * 6) / 3);
+  }
+}
+
 .work-card-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.work-card-item:nth-child(3n) {
-  margin-right: 0;
-}
-
-.work-card-item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
 }
 
 .work-card-item:hover .work-card-opacity {
@@ -411,12 +494,41 @@ ul {
 /* Work filter */
 .porffolio-filter {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin: -7.5px;
+  margin-bottom: 40px;
 }
 
-.porffolio-filter .porffolio-filter__item:last-child .prt-btn {
+@media screen and (min-width: 768px) {
+  .porffolio-filter {
+    flex-wrap: unset;
+    justify-content: center;
+    margin: -4px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .porffolio-filter {
+    margin: -4px;
+    margin-bottom: 50px;
+  }
+}
+
+.porffolio-filter__item {
+  margin: 7.5px;
+}
+
+@media screen and (min-width: 768px) {
+  .porffolio-filter__item {
+    margin: 4px;
+  }
+}
+
+.porffolio-filter__item:last-child .prt-btn {
   margin-right: 0;
+  margin-bottom: 7.5px;
 }
 
 .porffolio-filter .active-filter {
@@ -436,7 +548,6 @@ ul {
   color: #212121;
   background-color: #f5f4fa;
   border-radius: 4px;
-  margin-right: 8px;
   transition-property: background-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
