--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -15,7 +15,10 @@
     }
   }
   &__item {
-    margin: 0 15px 30px 15px;
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 0;
+    }
     @media screen and (min-width: $tablet) {
       width: calc((100% - 15px * 4) / 2);
       margin: 15px;
