--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,22 +5,64 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../images/background.jpg");
+    url("../images/hero/bg-phone.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 480px 400px;
-  @media screen and (min-width: $tablet) {
-    background-size: 768px 400px;
-  }
-  @media screen and (min-width: $desktop) {
-    background-size: 1600px 600px;
-  }
+  background-size: cover;
+  max-width: 480px;
+  margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero/bg-phone@2x.jpg");
+  }
 
+  @media screen and (min-width: $tablet) {
+    max-width: 768px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero/bg-tablet.jpg");
+  }
+  @media screen and (min-width: $tablet) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero/bg-tablet@2x.jpg");
+  }
   @media screen and (min-width: $desktop) {
+    max-width: 1200px;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero/bg-desktop.jpg");
+  }
+  @media screen and (min-width: $desktop) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero/bg-desktop@2x.jpg");
   }
 
   &__title {
