--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -29,10 +29,8 @@
       margin: 15px;
     }
   }
-  // закоментить потом
-  &__img {
+  &__photo {
     width: 100%;
-    height: 100%;
   }
   &__member {
     display: block;
