--- a/sass/layout/_portfolio_workcard.scss
+++ b/sass/layout/_portfolio_workcard.scss
@@ -40,6 +40,9 @@
 .work-card-cont {
   position: relative;
   overflow: hidden;
+  &__photo {
+    width: 100%;
+  }
 }
 .work-card-opacity {
   display: block;
