пофиксила подчеркивание и цвет на ссылке

--- a/sass/layout/_modal_in.scss
+++ b/sass/layout/_modal_in.scss
@@ -111,6 +111,8 @@
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    color: $accent-color;
+    text-decoration: underline;
     @media screen and (min-width: $desktop) {
       font-size: 14px;
       line-height: 1.71;
