--- a/css/main.css
+++ b/css/main.css
@@ -774,6 +774,8 @@ body {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  color: #2196f3;
+  text-decoration: underline;
 }
 
 @media screen and (min-width: 1200px) {
